Fixed spacing on homepage

--- a/sass/custom/_layout.scss
+++ b/sass/custom/_layout.scss
@@ -104,11 +104,6 @@ body.Win32 > header > hgroup > h1
   margin-bottom: 0.2em;
 }
 
-#content .blog-index article
-{
-  padding-top: 0.2em !important;
-}
-
 #header-outer-wrap
 {
   position: relative;
